--- a/src/Services/Notification/MedClaim.Notification.Application/MedClaim.Notification.Application.csproj
+++ b/src/Services/Notification/MedClaim.Notification.Application/MedClaim.Notification.Application.csproj
@@ -1,6 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="MassTransit.RabbitMQ" Version="9.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\..\Shared\MedClaim.Shared\MedClaim.Shared.csproj" />
   </ItemGroup>
 
