--- a/src/Services/Policy/MedClaim.Policy.Infrastructure/MedClaim.Policy.Infrastructure.csproj
+++ b/src/Services/Policy/MedClaim.Policy.Infrastructure/MedClaim.Policy.Infrastructure.csproj
@@ -7,6 +7,10 @@
   <ItemGroup>
     <PackageReference Include="MassTransit.RabbitMQ" Version="9.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.24" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.24">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.24" />
   </ItemGroup>
 
